# vite-fastapi-sqlite-skeleton

./: .env.example  .gitignore  .gitmodules  AGENTS.md  APP.md  CLAUDE.md  POSTINSTALL.en.md  POSTINSTALL.es.md  POSTINSTALL.md  README.md  docker-compose.yml  manifest.json
backend/: pyproject.toml
backend/scripts/: verify.py
backend/src/app/: background_jobs.py  cors.py  database.py  database_ext.py  desktop_agent_jobs.py  desktop_events.py  desktop_task_jobs.py  forger_context.py  forger_desktop.py  health.py  main.py  mcp_runtime.py  mcp_server.py  models.py  realtime.py
backend/src/app/routers/: health.py
backend/tests/: test_stack_contract.py
frontend/: components.json  eslint.config.js  index.html  package.json  vite.config.ts  vitest.config.ts
frontend/scripts/: assert-browser-clean.mjs
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: client.test.ts  client.ts  locale.test.ts  locale.ts  query.test.ts  query.ts  realtime.test.ts  realtime.ts  remoteTunnel.ts
frontend/src/app/: App.test.ts  App.tsx  AppShell.tsx  routes.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/src/features/dashboard/: DashboardView.tsx
frontend/src/features/examples/: ExamplesView.tsx
frontend/src/features/not-found/: NotFoundView.tsx
frontend/src/features/status/: StatusView.tsx  api.ts
frontend/src/i18n/: en.ts  es.ts  index.tsx
frontend/src/styles/: globals.css
frontend/src/theme/: theme.ts
scripts/: package_app.sh
skills/forger-locale-module/: SKILL.md
skills/stack-database-extension/: SKILL.md
