[project]
name = "skeleton"
version = "0.1.0"
description = "FastAPI backend skeleton"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlmodel>=0.0.22",
    "websockets>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=app",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=100",
    "-ra",
]
markers = [
    "bdd: backend stack behavior specs written as Given/When/Then scenarios.",
]

[tool.coverage.run]
branch = true
source = ["src/app"]
omit = [
    "tests/*",
    "src/app/background_jobs.py",
    "src/app/cors.py",
    "src/app/database.py",
    "src/app/desktop_agent_jobs.py",
    "src/app/desktop_events.py",
    "src/app/desktop_task_jobs.py",
    "src/app/forger_desktop.py",
    "src/app/health.py",
    "src/app/mcp_runtime.py",
    "src/app/mcp_server.py",
    "src/app/realtime.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "pragma: no cover",
]
